dev/portal/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal
  name: portal
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: portal
